--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ margin-top: 20px;
 margin-left: 20px;
 margin-right: 200px;
 
-padding: 10px 150px 10px 150px;
+padding: 1px 150px 1px 150px;
 
 border-radius: 15px;
 border-color: #C4CECO;
@@ -22,9 +22,18 @@ h3{
 }
 
 h4{
-  font-size: 24px
+  font-size: 24px;
 }
 
 .content-academics{
 border: 2px solid #000;
+}
+
+#button{
+ margin-left: 40%;
+  margin-right: 40%;
+  background-color: #C4CECO;
+  
+  border-radius: 15px;
+  height: 100px;
 }
