--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ margin-right: 200px;
 
 h1{
   font-size: 64px;
+  text-align: center;
 }
 
 h2{
@@ -15,6 +16,7 @@ h2{
 
 h3{
   font-size: 32px;
+  text-align: center;
 }
 
 h4{
