--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,26 +7,29 @@ margin-bottom: 20px;
   padding: 10px 150px 10px 150px;
   
   border-radius: 15px;
+  background-color: #D3D3D3;
+  
+  text-align: left;
 
 }
 
 h1{
   font-size: 64px;
-  text-align: center;
+  
 }
 
 h2{
   font-size: 18px;
-  text-align: center;
+  
 }
 
 h3{
   font-size: 32px;
-  text-align: center;
+  
 }
 
 h4{
   font-size: 24px;
-  text-align: center;
+  
 }
 
