--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,8 @@ img.image{
  height: 50%;
   align: right; 
   padding: 1px;
-  border: 10px solid #000000;
+  border: 5px solid #000000;
+  border-radius: 8px;
 }
 
 img{
