--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,16 +15,14 @@ margin-bottom: 20px;
 img.image{
  width: 50%;
  height: 50%;
-  align: right; 
+ float: right; 
   padding: 1px;
   border: 5px solid #000000;
   border-radius: 8px;
   box-shadow: 10px 10px 5px grey;
 }
 
-img{
- align: right; 
-}
+
 
 h1{
   font-size: 64px;
