--- a/templated-urban/assets/css/main.css
+++ b/templated-urban/assets/css/main.css
@@ -1590,7 +1590,7 @@
 	}
 
 	body, input, select, textarea {
-		font-family: "Scope One", serif;
+		font-family: 'Poppins', sans-serif;
 		font-size: 13pt;
 		font-weight: 300;
 		line-height: 1.65;
@@ -1754,7 +1754,7 @@
 	code {
 		border-radius: 4px;
 		border: solid 1px;
-		font-family: "Courier New", monospace;
+		font-family: 'Poppins', sans-serif;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
@@ -1762,7 +1762,7 @@
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
+		font-family: 'Poppins', sans-serif;
 		font-size: 0.9em;
 		margin: 0 0 2em 0;
 	}
@@ -1962,7 +1962,7 @@
 	input[type="button"],
 	button,
 	.button {
-		background-color: #3498db;
+		background-color: #ac5caf;
 		color: #fff !important;
 	}
 
@@ -1971,7 +1971,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #4aa3df;
+			background-color: #b35bae;
 		}
 
 		input[type="submit"]:active,
@@ -1979,7 +1979,7 @@
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: #258cd1;
+			background-color: #d125c3;
 		}
 
 		input[type="submit"].alt,
@@ -2245,7 +2245,7 @@
 		.select-wrapper:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
+			font-family: 'Poppins', sans-serif;
 			font-style: normal;
 			font-weight: normal;
 			text-transform: none !important;
@@ -2309,7 +2309,7 @@
 			input[type="radio"] + label:before {
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
-				font-family: FontAwesome;
+				font-family: 'Poppins', sans-serif;
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
@@ -2460,7 +2460,7 @@
 		border: 0;
 		display: inline-block;
 		position: relative;
-		box-shadow: 0px 0px 0px 7px #fff, 0px 0px 0px 8px rgba(0, 0, 0, 0.1);
+		box-shadow: 0px 0px 0px 7px rgb(109, 109, 109), 0px 0px 0px 8px rgba(0, 0, 0, 0.1);
 	}
 
 		.image img {
@@ -2896,7 +2896,7 @@
 
 		.wrapper.style1 {
 			background-color: #fafafa;
-			color: #999999;
+			color: #4d4d4d;
 		}
 
 			.wrapper.style1 input, .wrapper.style1 select, .wrapper.style1 textarea {
@@ -2941,7 +2941,7 @@
 			.wrapper.style1 input[type="button"],
 			.wrapper.style1 button,
 			.wrapper.style1 .button {
-				background-color: #3498db;
+				background-color: #525b61;
 				color: #fff !important;
 			}
 
@@ -2950,7 +2950,7 @@
 				.wrapper.style1 input[type="button"]:hover,
 				.wrapper.style1 button:hover,
 				.wrapper.style1 .button:hover {
-					background-color: #4aa3df;
+					background-color: #7a7a7a;
 				}
 
 				.wrapper.style1 input[type="submit"]:active,
@@ -2958,7 +2958,7 @@
 				.wrapper.style1 input[type="button"]:active,
 				.wrapper.style1 button:active,
 				.wrapper.style1 .button:active {
-					background-color: #258cd1;
+					background-color: #222222;
 				}
 
 				.wrapper.style1 input[type="submit"].alt,
@@ -2992,7 +2992,7 @@
 					.wrapper.style1 input[type="button"].alt.icon:before,
 					.wrapper.style1 button.alt.icon:before,
 					.wrapper.style1 .button.alt.icon:before {
-						color: #bfbfbf;
+						color: #575757;
 					}
 
 				.wrapper.style1 input[type="submit"].special,
@@ -3055,23 +3055,23 @@
 			}
 
 			.wrapper.style1 ::-webkit-input-placeholder {
-				color: #bfbfbf !important;
+				color: #5f5f5f !important;
 			}
 
 			.wrapper.style1 :-moz-placeholder {
-				color: #bfbfbf !important;
+				color: #5f5f5f !important;
 			}
 
 			.wrapper.style1 ::-moz-placeholder {
-				color: #bfbfbf !important;
+				color: #5f5f5f !important;
 			}
 
 			.wrapper.style1 :-ms-input-placeholder {
-				color: #bfbfbf !important;
+				color: #5f5f5f !important;
 			}
 
 			.wrapper.style1 .formerize-placeholder {
-				color: #bfbfbf !important;
+				color: #5f5f5f !important;
 			}
 
 			.wrapper.style1 ul.alt li {
@@ -3079,7 +3079,7 @@
 			}
 
 			.wrapper.style1 header p {
-				color: #bfbfbf;
+				color: #5f5f5f;
 			}
 
 			.wrapper.style1 table tbody tr {
@@ -3107,8 +3107,8 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #3498db;
-			color: #aed6f1;
+			background-color: #303030;
+			color: #ffffff;
 		}
 
 			.wrapper.style2 input, .wrapper.style2 select, .wrapper.style2 textarea {
@@ -3153,8 +3153,8 @@
 			.wrapper.style2 input[type="button"],
 			.wrapper.style2 button,
 			.wrapper.style2 .button {
-				background-color: #fff;
-				color: #3498db !important;
+				background-color: rgba(100, 100, 100, 0.89);
+				color: #ffffff !important;
 			}
 
 				.wrapper.style2 input[type="submit"].alt,
@@ -3162,7 +3162,7 @@
 				.wrapper.style2 input[type="button"].alt,
 				.wrapper.style2 button.alt,
 				.wrapper.style2 .button.alt {
-					background-color: transparent;
+					background-color: #5f5f5f;
 					box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.25);
 					color: #fff !important;
 				}
@@ -3188,7 +3188,7 @@
 					.wrapper.style2 input[type="button"].alt.icon:before,
 					.wrapper.style2 button.alt.icon:before,
 					.wrapper.style2 .button.alt.icon:before {
-						color: #67b2e4;
+						color: #606a70;
 					}
 
 				.wrapper.style2 input[type="submit"].special,
@@ -3244,7 +3244,7 @@
 
 			.wrapper.style2 input[type="checkbox"] + label,
 			.wrapper.style2 input[type="radio"] + label {
-				color: #aed6f1;
+				color: #5f5f5f;
 			}
 
 				.wrapper.style2 input[type="checkbox"] + label:before,
@@ -3267,23 +3267,23 @@
 			}
 
 			.wrapper.style2 ::-webkit-input-placeholder {
-				color: #67b2e4 !important;
+				color: #b6b6b6 !important;
 			}
 
 			.wrapper.style2 :-moz-placeholder {
-				color: #67b2e4 !important;
+				color: #b6b6b6 !important;
 			}
 
 			.wrapper.style2 ::-moz-placeholder {
-				color: #67b2e4 !important;
+				color: #b6b6b6 !important;
 			}
 
 			.wrapper.style2 :-ms-input-placeholder {
-				color: #67b2e4 !important;
+				color: #b6b6b6 !important;
 			}
 
 			.wrapper.style2 .formerize-placeholder {
-				color: #67b2e4 !important;
+				color: #b6b6b6 !important;
 			}
 
 			.wrapper.style2 ul.alt li {
@@ -3291,7 +3291,7 @@
 			}
 
 			.wrapper.style2 header p {
-				color: #67b2e4;
+				color: #b6b6b6;
 			}
 
 			.wrapper.style2 table tbody tr {
@@ -3319,7 +3319,7 @@
 			}
 
 			.wrapper.style2 .image {
-				box-shadow: 0px 0px 0px 7px #3498db, 0px 0px 0px 8px rgba(255, 255, 255, 0.25);
+				box-shadow: 0px 0px 0px 7px #ffffff, 0px 0px 0px 8px rgba(255, 255, 255, 0.25);
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -3465,7 +3465,7 @@
 					content: "";
 					-moz-osx-font-smoothing: grayscale;
 					-webkit-font-smoothing: antialiased;
-					font-family: FontAwesome;
+					font-family: 'Poppins', sans-serif;;
 					font-style: normal;
 					font-weight: normal;
 					text-transform: none !important;
@@ -3646,7 +3646,7 @@
 				content: "";
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
-				font-family: FontAwesome;
+				font-family: 'Poppins', sans-serif;
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
