--- a/templated-urban/assets/css/main.css
+++ b/templated-urban/assets/css/main.css
@@ -9,7 +9,9 @@
 */
 
 /* Reset */
-
+.newText{
+	font-size: 17px;
+}
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -2117,6 +2119,15 @@
 					}
 
 			}
+#textLink{
+	color: rgb(170, 255, 181);
+}
+#textLinkedIn{
+	color: rgb(170, 255, 181);
+}
+#mailTime{
+	color: rgb(170, 255, 181);
+}
 
 		.flex.flex-4 .col {
 			width: 22%;
